alignment and fixes

--- a/resources/editor/scss/panel.scss
+++ b/resources/editor/scss/panel.scss
@@ -1,4 +1,9 @@
 .panel-widgets__card {
   border: 0.05px solid #000000;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2), inset 0px 1px 4px rgba(201, 198, 198, 0.199);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2), inset 0 1px 4px rgba(201, 198, 198, 0.199);
+}
+
+.ds-controller__text {
+  box-shadow: 0 2px 2px rgba(50, 50, 50, 0.2), inset 0 1px 0 0 rgba(255, 255, 255, 0.1);
+  width: calc(100% - 1rem)
 }
